Archive/53e87a54665eb05a9d218f375f225556-385ed57e6c85e08448a136e6ecdeab98/output
main.cpp:4:18: error: constexpr variable 'pi' must be initialized by a constant expression
constexpr double pi = atan(1.0)*4.0;
                 ^    ~~~~~~~~~~~~~
main.cpp:4:23: note: non-constexpr function 'atan' cannot be used in a constant expression
constexpr double pi = atan(1.0)*4.0;
                      ^
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:59:13: note: declared here
__MATHCALL (atan,, (_Mdouble_ __x));
            ^
/usr/include/math.h:55:25: note: expanded from macro '__MATHCALL'
  __MATHDECL (_Mdouble_,function,suffix, args)
                        ^
/usr/include/math.h:57:22: note: expanded from macro '__MATHDECL'
  __MATHDECL_1(type, function,suffix, args); \
                     ^
/usr/include/math.h:65:31: note: expanded from macro '__MATHDECL_1'
  extern type __MATH_PRECNAME(function,suffix) args __THROW
                              ^
/usr/include/math.h:68:42: note: expanded from macro '__MATH_PRECNAME'
#define __MATH_PRECNAME(name,r) __CONCAT(name,r)
                                         ^
/usr/include/x86_64-linux-gnu/sys/cdefs.h:94:23: note: expanded from macro '__CONCAT'
#define __CONCAT(x,y)   x ## y
                        ^
1 error generated.
